# corebrimtech-os

./: .gitignore  CLAUDE.md  DESKTOP.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SIGNING.md  TODOS.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  desktop-release.yml  release.yml
.qoder/rules/: MASTER.md
plans/: cofounder-desktop-arc.md
scripts/: build-desktop.mjs  test-link-check.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: ai.rs  lib.rs  main.rs  net.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ComingSoon.tsx  FounderBrainNudge.tsx  Sidebar.tsx
src/lib/: ai-transport.test.ts  ai-transport.ts  anthropic.ts  api-optimizer.ts  auto-research.live.test.ts  auto-research.test.ts  auto-research.ts  autonomous-outreach.ts  burn-rate.ts  checks.test.ts  checks.ts  client-ai.ts  competitor-intelligence.ts  deal-pipeline.ts  decision-journal.ts  desktop-bridge.test.ts  desktop-bridge.ts  desktop-notify.test.ts  desktop-notify.ts  desktop-signal-watch.test.ts  desktop-signal-watch.ts  email-templates.ts  energy-tracker.ts  env.ts  feature-flags.test.ts  feature-flags.ts  founder-brain.ts  goals.ts  grant-tracker.ts  grant-writer.ts  hackathon-builder.ts  hackathon-scout.ts  idea-intelligence.ts  investor-db.ts  invoice.ts  llm.complete.test.ts  llm.test.ts  llm.ts  market-gap-scanner.ts  meeting-prep.ts  (+15 more)
src/types/: index.ts
supabase/migrations/: 20250228_add_support_tables.sql
(+107 files in other folders)
