[package]
name = "corebrimtech-os"
version = "0.1.1"
description = "CoreBrimTech OS — the operating system for startup founders"
authors = ["Core Brim Tech"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary to make the lib name
# unique and wouldn't conflict with the bin name. This is the default Tauri v2 layout.
name = "corebrimtech_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls-tls avoids a system OpenSSL build dependency across platforms.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
